--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ asyncpg == 0.26.0
 psycopg2-binary == 2.9.3
 redis == 4.3.4
 alembic == 1.8.1
-blockcypher == 1.0.93
 pyqrcode == 1.2.1
 pypng == 0.20220715.0
+scrypt == 0.8.20
+bitcoinlib == 0.6.5
+web3 == 5.31.1
+eth_account == 0.5.9
